--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,10 +1,15 @@
 .wrapper {
-  background: #4abde5;
+  background: white;
   height: 15vh;
   display: flex;
   align-items: center;
 }
 
+.logo-link {
+  flex-basis: 0 1 30%;
+  height: 10vh;
+}
+
 .logo {
-  flex-basis: 30%;
+  height: 100%;
 }
