--- a/src/global.css
+++ b/src/global.css
@@ -4,3 +4,17 @@
   margin: 0 auto;
   font-family: "Noto Sans", sans-serif;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+input {
+  border-radius: 3px;
+  margin-right: 10px;
+}
+
+label {
+  margin-right: 10px;
+}
