--- a/src/global.css
+++ b/src/global.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
 
 * {
-  margin: 0 auto;
+  margin: 0;
   font-family: "Noto Sans", sans-serif;
+  box-sizing: border-box;
 }
 
 a {
