--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,16 +1,25 @@
 .wrapper {
-  background: white;
+  background: #f7f7f7;
   height: 15vh;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-.logo-link {
-  flex-basis: 0 0 30%;
+.logo-container {
+  display: inherit;
+  flex: 0 0 40%;
   height: 10vh;
 }
 
 .logo {
   height: 100%;
+  margin-left: 50px;
+}
+
+.nav {
+  flex: 0 0 60%;
+  display: inherit;
+  justify-content: space-evenly;
+  align-items: center;
 }
