--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Caveat&display=swap");
 
 * {
   margin: 0;
